# DeepFist

./: .gitignore  LICENSE  README.md  pyproject.toml
deepfist/data/: dataset.py  wmr_dataset.py
deepfist/export/: to_onnx.py
deepfist/features/: conditioner.py  spectrogram.py
deepfist/model/: decode.py  net.py
deepfist/morse/: alphabet.py  timing.py
deepfist/synth/: channel.py  codec.py  envelope_decode.py  fist.py  generator.py  keyer.py  text.py  tone.py
deepfist/train/: loop.py  metrics.py
docs/: index.html
scripts/: demo_file.py  evaluate.py  export.py  generate.py  listen.py  live_decode.py  tci_capture.py  tci_decode.py  train.py
tests/: test_benchmark.py  test_copy_display.py  test_export_script.py  test_onnx_env.py  test_rbn_harvest.py  test_scripts.py  test_smoke.py  test_torch_env.py  test_train_scripts.py
tests/data/: test_dataset.py
tests/export/: test_onnx_export.py
tests/features/: test_spectrogram.py
tests/model/: test_decode.py  test_net.py
tests/morse/: test_alphabet.py  test_timing.py
tests/synth/: test_channel.py  test_codec.py  test_fist.py  test_generator.py  test_keyer.py  test_roundtrip.py  test_text.py  (+1 more)
tools/: README.md  align_arrl.py  band_extract.py  band_record.py  benchmark_vs_deepcw.py  bt_real_eval.py  bt_synth_eval.py  build_arrl_hispeed.py  build_callsign_eval.py  build_lyra.py  build_real_dataset.py  callsign_eval.py  capture_here.py  capture_w1aw.bat  capture_w1aw.py  cw_frontend.py  cw_lm.py  despike.py  error_analysis.py  eval_callsign_heldout.py  eval_heldout.py  eval_real_session.py  eval_realset.py  exp26_build_trainset.py  extract_callsign.py  follow_vfo_capture.py  heldout_copy_eval.py  locate_callsign_template.py  pseudo_label_capture.py  qso_correct.py  ragchew_eval.py  rbn_confirm.py  rbn_harvest.py  rbn_spot_logger.py  rescore.py  scp_correct.py  segment_anchors.py  squelch.py  stress_test_realism.py  teacher_label.py  (+3 more)
(+9 files in other folders)
