[project]
name = "deepfist"
version = "0.0.1"
description = "Clean-room neural CW (Morse) decoder — synthetic data foundation"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepfist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
