[project]
name = "deepfist"
version = "0.0.1"
description = "Clean-room neural CW (Morse) decoder — synthetic data foundation"
requires-python = ">=3.11"
# torch: install the CUDA build with:
#   uv pip install torch --index-url https://download.pytorch.org/whl/cu124
dependencies = ["numpy>=1.26", "torch>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "onnx>=1.22", "onnxruntime>=1.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepfist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
